/* $Id$ */

version 0.8.4 (2006.06...):

 * more LTIlib support!
 * [#camera]: improved
 * rblti supports ltilib 1.9.15 and gcc 4
 * 

version 0.8.3 (2006.04.02):

 * added Makefile rules for downloading+installing ruby 1.9
 * new numops: weight rol ror
 * new vecops concept helps with complex numbers
 * new vecops: C.* C.*conj C./ C./conj C.sq- C.abs-
 * [#convolve]: added attr "wrap", "anti"
 * [#inner]: faster!
 * [#shunt]: added attr index,mode,lo,hi
 * now also works with older (non-CVS) versions of GEM
 * new object classes: [#fastblur], [#t], [#rgb_to_rgba], [#rgba_to_rgb],
   [#change], [#swap], [#polygon_perimetre], [#polygon_area], [args],
   [#gamma], [#saturation]
 * now autodetects the .gz suffix (goes with ppm/targa/grid formats)
 * moved the rest of pd_help/ to doc/flow_classes/
 * automatic attribute generator for Ruby

version 0.8.2 (2006.03.17):

 * Ruby 1.9 required
 * removed jmax2pd
 * fixes of various compilation problems
 * new object classes: [realtimer], [#export_pix], [#import_pix],
   [#border], [#fft]
 * beginning support for LTIlib. new object classes:
   [lti], [lti.meanShiftSegmentation], etc.
 * added "load" method in [gridflow]. (thanks Claude)
 * automatic attribute generator for C++
 * added "help" and "get" methods to *all* classes (!!!)
 * no more "make install"
 * not using mkmf.rb (ruby's makefile generator) anymore
 * removed --debug-harder (use "valgrind" instead)

version 0.8.1 (2006.02.20):

 * [ls] now supports wildcards: ? [] * **
 * [#color] has new method: delegate
 * added [regsub], [memstat], [listfind], [sendgui]
 * x11: removed methods: draw,autodraw; added: use_shm,title
 * examples : added markov.pd, bounce.pd, doodle.pd, mechanics.pd
 * [#pack],[#unpack] now default to 2 values
 * new numops: clip+,clip-
 * fix for shared memory bug in [#out x11]
 * added [#out tk]
 * added [#out opengl] (using GLUT, hackishly)
 * [unix_time] behaviour changed. (see manual)

version 0.8.0 (2005.06.06):
