@@ -5,7 +5,18 @@ version 0.8.4 (2006.06...):
  * more LTIlib support!
  * [#camera]: improved
  * rblti supports ltilib 1.9.15 and gcc 4
- * 
+ * new object classes: [#draw_rect], [route2]
+ * new float-only numops:   sin   cos   tanh   exp   log atan2
+ * new float-only vecops: C.sin C.cos C.tanh C.exp C.log
+ * [#fft] can do RGB (per channel)
+ *
+ *
+ *
+ *
+ *
+
+ * LTI...
+ * [#edit_polygon] (not finished)
 
 version 0.8.3 (2006.04.02):
 
